fixed horizontal bar not taking full width on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ body {
 }
 
 #navbar-container {
-  width: 200%;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -37,6 +37,9 @@ body {
 }
 
 @media (max-width: 500px) {
+  #navbar-container {
+    width: 90%;
+  }
   .nav-links {
     justify-content: center;
   }
